[package]
name = "crab-reader"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.17"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev", version = "0.1.0" }
reqwest = "0.11.16"
anyhow = "1.0.70"
thiserror = "1.0.40"
futures = "0.3.27"
rss = { version = "2.0.3", features = ["with-serde"] }
chrono = "0.4.24"
specta = { version = "1.0.0", features = ["chrono"] }
tauri-specta = { version = "1.0.0", features = ["typescript"] }
ammonia = "3.3.0"
strum = { version = "0.24.1", features = ["derive"] }

[dev-dependencies]
mockito = "1.0.1"
tokio = { version = "1.27.0", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
