[package]
name = "crab-reader"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.18"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev", version = "0.1.0" }
reqwest = "0.11.18"
anyhow = "1.0.71"
thiserror = "1.0.40"
futures = "0.3.28"
rss = { version = "2.0.4", features = ["with-serde"] }
chrono = "0.4.26"
specta = { version = "1.0.4", features = ["chrono"] }
tauri-specta = { version = "1.0.2", features = ["typescript"] }
ammonia = "3.3.0"
strum = { version = "0.24.1", features = ["derive"] }
opml = "1.1.5"

[dev-dependencies]
mockito = "1.0.2"
tokio = { version = "1.28.2", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
