[package]
name = "crab-reader"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["dialog", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.20"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev", version = "0.1.0" }
reqwest = "0.11.20"
anyhow = "1.0.75"
thiserror = "1.0.47"
futures = "0.3.28"
rss = { version = "2.0.6", features = ["with-serde"] }
chrono = "0.4.28"
specta = { version = "1.0.5", features = ["chrono"] }
tauri-specta = { version = "1.0.2", features = ["typescript"] }
ammonia = "3.3.0"
strum = { version = "0.25.0", features = ["derive"] }
opml = "1.1.5"

[dev-dependencies]
mockito = "1.1.0"
tokio = { version = "1.32.0", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
